[project]
name = "geoapis"
version = "0.3.2"
description = "A package for downloading geospatial data from web APIs."
authors = [{ name = "Rose pearson", email = "rose.pearson@niwa.co.nz" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["APIs", "LiDAR", "point clouds", "vector", "Geospatial data"]
dependencies = [
    "geopandas>=0.13.2",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "shapely>=2.0.2",
    "boto3>=1.33.5",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-dotenv>=1.0.0",
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true
